# pr2_pbd

./: 0.yaml  1.yaml  2.yaml  3.yaml  README.md
pr2_interactive_controller/: CMakeLists.txt  package.xml
pr2_interactive_controller/launch/: web_launch.launch
pr2_interactive_controller/msg/: InteractionCommand.msg
pr2_interactive_controller/src/: controller.cpp
pr2_interactive_controller/srv/: InteractionSettings.srv
pr2_pbd_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
pr2_pbd_gui/scripts/: pr2_pbd_gui
pr2_pbd_gui/src/pr2_pbd_gui/: pbd_gui.py  pbd_gui.py~  pr2_pbd_gui.py
pr2_pbd_http/: CMakeLists.txt  index.html  package.xml  script.js  test.html
pr2_pbd_http/html/: index.html  js-yaml.js  pbdControls.js  script.js  visual.html  visual.js
pr2_pbd_http/launch/: http_server.launch
pr2_pbd_http/nodes/: http_server.py
pr2_pbd_interaction/: CMakeLists.txt  package.xml  setup.py
pr2_pbd_interaction/launch/: gazebo_with_everything_else_but_interaction_node.launch  interaction_node.launch  pr2_interactive_manipulation_desktop.launch
pr2_pbd_interaction/msg/: ArmState.msg  ExperimentState.msg  ExperimentState.msg~
pr2_pbd_interaction/nodes/: interaction.py
pr2_pbd_interaction/src/: Action.py  Arm.py  Arms.py  Arms.py~  Interaction.py  Interaction.py~  Object.py  Session.py  Session.py~  World.py  test.py
pr2_pbd_interaction/src/pr2_pbd_interaction/: Action.py  Arms.py  Interaction.py  Landmark.py  LandmarkDescriptor.py  MarkerHandler.py  ObjectDescriptor.py  ObjectType.py  Response.py  Robot.py  RobotDescriptor.py  Session.py  TableDescriptor.py  World.py
pr2_pbd_speech_recognition/: CMakeLists.txt  package.xml
pr2_pbd_speech_recognition/msg/: Command.msg
pr2_social_gaze/: CMakeLists.txt  package.xml
pr2_social_gaze/nodes/: social_gaze.py
tabletop_object_detector/: CMakeLists.txt  package.xml
tabletop_object_detector/launch/: tabletop_segmentation.launch
tabletop_object_detector/src/: tabletop_segmentation.cpp
