<package>
   <name>tabletop_object_detector</name>
   <version>1.0.3</version>
   <license>alkfjadslkgf</license>
   <maintainer email="billgates@microsoft.com">Bill Gates</maintainer>
   <description>
      Performs object segmentation and simple object recognition for
    constrained scenes.
   </description>

   <buildtool_depend>catkin</buildtool_depend>

   <build_depend>roscpp</build_depend>
   <build_depend>roslib</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>pcl</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>libpcl-all-dev</build_depend>
   <build_depend>pcl_conversions</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>visualization_msgs</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>roslib</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>pcl</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>libpcl-all</run_depend>
   <run_depend>libpcl-all-dev</run_depend>
   <run_depend>pcl_conversions</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>visualization_msgs</run_depend>

   <export>
   </export>
</package>


